<resources>
    <string name="app_name">AndroidShop</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">New Account</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="post_address">Post Address</string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="login_guest">Login As Guest</string>
    <string name="loginGoogle">Login with Google account</string>
    <string name="to_cart">Add to cart</string>
    <string name="delete">Delete</string>
    <string-array name="phone_modes">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="kos_rba">Kosárba</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="view">View</string>
    <string name="be_ll_t_sok">Beállítások</string>
    <string name="kijelentkez_s">Kijelentkezés</string>


    <string-array name="shopping_item_names">
        <item>Maneskin</item>
        <item>Miyagi x Endshpiel</item>
        <item>Pogányinduló</item>
        <item>GZUZ</item>
        <item>Azahriah</item>
        <item>Eminem</item>
        <item>Lady Gaga</item>
        <item>Dua Lipa</item>
        <item>Kendrick Lamar</item>
        <item>Beton.Hofi</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>2023.Május 16. BUDAPEST ARÉNA</item>
        <item>2023.Április 14. FAMOUS</item>
        <item>2023.Április 01. - BARBA NEGRA Red Stage</item>
        <item>2023.Július 13. BackStagePub</item>
        <item>2023.Március 10. BUDAPEST ARÉNA</item>
        <item>2023.Szeptermber 11. Papp László</item>
        <item> - TBA </item>
        <item> - TBA </item>
        <item> - TBA </item>
        <item> - TBA</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>3</item>
        <item>5</item>
        <item>4</item>
        <item>4.5</item>
        <item>4.5</item>
        <item>5</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>3.5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/maneskin</item>
        <item>@drawable/miyagi</item>
        <item>@drawable/pogany</item>
        <item>@drawable/jesusgzuz</item>
        <item>@drawable/azahriah</item>
        <item>@drawable/eminem</item>
        <item>@drawable/ladygaga</item>
        <item>@drawable/dua_lipa</item>
        <item>@drawable/sirlamar</item>
        <item>@drawable/betonhofi</item>
    </array>

    <array name="shopping_item_price">
        <item>44.000 Ft</item>
        <item>42.000 Ft</item>
        <item>10.000 Ft</item>
        <item>33.000 Ft</item>
        <item>15.000 Ft</item>
        <item>64.000 Ft</item>
        <item>52.000 Ft</item>
        <item>58.000 Ft</item>
        <item>33.000 Ft</item>
        <item>12.000 Ft</item>
    </array>
</resources>